[package]
name = "wasm-fractal"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]

[profile.release]
# remove debug symbols:
debug = false
# enable link time optimisations:
lto = true
# optimise for size (less aggressive than z):
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
# This should match the version of
# wasm-bindgen-cli that you install:
wasm-bindgen = "=0.2.42"
